lanecwe-Prod/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>APAC_APAC_Migration_ID__c</fullName>
        <label>APAC_APAC Migration ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Billing_Ticket_Number__c</fullName>
        <description>Once the contract has been processed Daniel raise a billing ticket in SERVICE NOW to notify billing to set up the rates in Metra Care. This is the ticket number.</description>
        <inlineHelpText>Once the contract has been processed Daniel raise a billing ticket in SERVICE NOW to notify billing to set up the rates in Metra Care. This is the ticket number.</inlineHelpText>
        <label>Billing Ticket Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Cancellation_Billing_Ticket__c</fullName>
        <label>Cancellation Billing Ticket</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APAC_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Change in Customer’s Internal Business Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible with the Company&apos;s Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderator is No Longer with the Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need for More Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGi Internal Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Product Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rates too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfit for the Purpose of the Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APAC_Cancellation_Type__c</fullName>
        <label>Cancellation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderators</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APAC_Committed_Named_Users__c</fullName>
        <label>Committed Named Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Company_ID_APAC__c</fullName>
        <label>Company ID APAC</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APAC_Company_ID_US_GM__c</fullName>
        <label>Company ID US (GM)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APAC_Company_ID_US_iMeet__c</fullName>
        <label>Company ID US (iMeet)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APAC_Contract_End_Date__c</fullName>
        <formula>DATE( 
/*YEAR*/ 
YEAR( Actual_Service_Commencement_Date__c) + FLOOR((MONTH(Actual_Service_Commencement_Date__c) + APAC_Total_Term_Months_in_months__c - 1)/12), 
/*MONTH*/ 
CASE(MOD(MONTH(Actual_Service_Commencement_Date__c)+APAC_Total_Term_Months_in_months__c, 12), 
/*value = if the month of the C_E_A_D_2 is 12, the above calculation evaluates to 0, therefore, the result1 should be 12. 12 is the only month that evaluates to something other than its #, so it requires a CASE*/ 
0,12, 
/*else_result is the same MOD(MONTH( equation as above, because it works for months 1-11*/ 
MOD(MONTH(Actual_Service_Commencement_Date__c )+APAC_Total_Term_Months_in_months__c, 12 )),/*for example,(9+24)/12=2.75-2=.75*12=9*/ 
/*DAY*/ 
/*So the MIN returns the lowest value for the CASE and the IF below. If the lowest value is just DAY(C_E_A_D_2), then great. But if it&apos;s the last day of one of the 30 day months, or 2/28 or 2/29 on a leap year, then the below CASE and IF functions determine if that is the case and then provide the appropriate day*/ 
MIN(DAY(Actual_Service_Commencement_Date__c), 
CASE(MOD(MONTH(Actual_Service_Commencement_Date__c)+APAC_Total_Term_Months_in_months__c,12),/*for example,(7+12)/12=1.58-1=.58*12=7*/ 
9,30, 
4,30, 
6,30, 
11,30, 
2, /* result for 2 = return max days for February dependent on if end date is leap year */ 
IF(MOD(YEAR(Actual_Service_Commencement_Date__c) + FLOOR((MONTH(Actual_Service_Commencement_Date__c ) + APAC_Total_Term_Months_in_months__c)/12) , 400 ) = 0 || (MOD(YEAR(Actual_Service_Commencement_Date__c) + FLOOR((MONTH (Actual_Service_Commencement_Date__c) + APAC_Total_Term_Months_in_months__c)/12) , 4 ) = 0 &amp;&amp; MOD(YEAR(Actual_Service_Commencement_Date__c) + FLOOR((MONTH(Actual_Service_Commencement_Date__c) + APAC_Total_Term_Months_in_months__c)/12) , 100 ) &lt;&gt; 0 
) 
, 29,28) 
,31 ) ) 
)</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APAC_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People&apos;s Republic of China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiribati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marshall Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated States of Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nauru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Papua New Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solomon Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timor-Leste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republic of China (Taiwan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuvalu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanuatu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APAC_Currency_Flag__c</fullName>
        <formula>IF(ISPICKVAL(APAC_Currency__c, &quot;AUD&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a000000347H2&quot;, &quot;*&quot;, 19, 30),
IF(ISPICKVAL(APAC_Currency__c, &quot;HKD&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a00000033gsD&quot;, &quot;*&quot;, 19, 30), 
IF(ISPICKVAL(APAC_Currency__c, &quot;MYR&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a00000033gsE&quot;, &quot;*&quot;, 19, 30), 
IF(ISPICKVAL(APAC_Currency__c, &quot;NZD&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a00000033gsF&quot;, &quot;*&quot;, 19, 30), 
IF(ISPICKVAL(APAC_Currency__c, &quot;RMB&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a00000033gsC&quot;, &quot;*&quot;, 19, 30), 
IF(ISPICKVAL(APAC_Currency__c, &quot;SGD&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a00000033gsB&quot;, &quot;*&quot;, 19, 30), 
IF(ISPICKVAL(APAC_Currency__c, &quot;TWD&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a00000033gsG&quot;, &quot;*&quot;, 19, 30), 
IF(ISPICKVAL(APAC_Currency__c, &quot;USD&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a00000033gsH&quot;, &quot;*&quot;, 19, 30), 
NULL
))))))))</formula>
        <label>Currency Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APAC_Currency__c</fullName>
        <label>APAC Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APAC_Date_Billing_Notified__c</fullName>
        <description>Once the contract has been processed, Daniel raises a billing ticket in SERVICE NOW to notify billing to set up the rates in Metra Care. This is the date the ticket was raised.</description>
        <inlineHelpText>Once the contract has been processed, Daniel raises a billing ticket in SERVICE NOW to notify billing to set up the rates in Metra Care. This is the date the ticket was raised.</inlineHelpText>
        <label>Date Billing Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APAC_Date_Noticed_Received_from_Customer__c</fullName>
        <label>Date Noticed Received from Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APAC_Early_Termination_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Termination Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Early_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Effective_Cancellation_Date__c</fullName>
        <label>Effective Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APAC_Final_Signed_Date__c</fullName>
        <label>APAC Final Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APAC_GM_Licences_Swapped__c</fullName>
        <label>GM Licences Swapped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_License_Swapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Swapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Maximum_Meeting_Participants__c</fullName>
        <label>Maximum Meeting Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Minimum_Monthly_Charge__c</fullName>
        <description>APAC - Committed Named Users * Monthly Service Charge/Named User</description>
        <formula>APAC_Committed_Named_Users__c * APAC_Monthly_Service_Charge_Named_User__c</formula>
        <inlineHelpText>Committed Named Users * Monthly Service Charge/Named User</inlineHelpText>
        <label>Monthly Recurring Charge</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Minimum_Monthly_Committed_Charge__c</fullName>
        <label>Minimum Monthly Committed Charge</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Monthly_Contracted_Charge_USD__c</fullName>
        <formula>IF(
ISPICKVAL(APAC_Currency__c, &quot;RMB&quot;), APAC_Minimum_Monthly_Charge__c/6.6,
IF(
ISPICKVAL(APAC_Currency__c, &quot;HKD&quot;), APAC_Minimum_Monthly_Charge__c/7.7,
IF(
ISPICKVAL(APAC_Currency__c, &quot;AUD&quot;), APAC_Minimum_Monthly_Charge__c/0.98,
IF(
ISPICKVAL(APAC_Currency__c, &quot;NZD&quot;), APAC_Minimum_Monthly_Charge__c/1.3,
IF(
ISPICKVAL(APAC_Currency__c, &quot;SGD&quot;), APAC_Minimum_Monthly_Charge__c/1.3,
IF(
ISPICKVAL(APAC_Currency__c, &quot;MYR&quot;), APAC_Minimum_Monthly_Charge__c/3.1,
IF(
ISPICKVAL(APAC_Currency__c, &quot;JPY&quot;), APAC_Minimum_Monthly_Charge__c/78,
IF(
ISPICKVAL(APAC_Currency__c, &quot;KOW&quot;), APAC_Minimum_Monthly_Charge__c/1140,
IF(
ISPICKVAL(APAC_Currency__c, &quot;USD&quot;), APAC_Minimum_Monthly_Charge__c/1,
IF(
ISPICKVAL(APAC_Currency__c, &quot;TWD&quot;), APAC_Minimum_Monthly_Charge__c/30.39514,
0))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Minimum Monthly Charge * MAAP Currency Exchange Rate</inlineHelpText>
        <label>Monthly Contracted Charge(USD)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Monthly_Service_Charge_Named_User__c</fullName>
        <label>Monthly Service Charge/Named User</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_New_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Notice_Required_to_Terminate__c</fullName>
        <label>Notice Required to Terminate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Number_of_Moderators_Cancelled__c</fullName>
        <label>Number of Moderators Cancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Offer_ID__c</fullName>
        <description>The quote identifier number for the contract in WIN$ (different from the contract ID).</description>
        <inlineHelpText>The quote identifier number for the contract in WIN$ (different from the contract ID).</inlineHelpText>
        <label>Offer ID#</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APAC_Plan__c</fullName>
        <label>Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom International Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom Local Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet International Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Local Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Live Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Business Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited iMeet Sofphone</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APAC_Pricing_Plan__c</fullName>
        <label>Pricing Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Audio Bundle International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Bundle Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local with Mobile Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsite(Webex)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Web &amp; VOIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Only</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APAC_Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Event Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpAssist/MeetNow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APAC_Re_Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Renewal__c</fullName>
        <label>Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APAC_Split_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Termination_Fee_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Termination Fee Due</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Total_Contract_Value_USD__c</fullName>
        <formula>APAC_Monthly_Contracted_Charge_USD__c * APAC_Total_Term_Months_in_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Contracted Charge(USD) * Total Term Months (in months)</inlineHelpText>
        <label>Total Contract Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Total_Term_Commitment__c</fullName>
        <description>(APAC - Minimum Monthly Charge + Minimum Monthly Committed Charge) * Total Term Months (In Months)</description>
        <formula>(APAC_Minimum_Monthly_Charge__c + APAC_Minimum_Monthly_Committed_Charge__c) * APAC_Total_Term_Months_in_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Minimum Monthly Charge + Minimum Monthly Committed Charge) * Total Term Months (In Months)</inlineHelpText>
        <label>Total Term Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Total_Term_Months_in_months__c</fullName>
        <label>Total Term Months (in months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_iMeet_Licences_Swapped__c</fullName>
        <label>iMeet Licences Swapped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>used in custom lookup fields</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Service_Commencement_Date__c</fullName>
        <inlineHelpText>Used to override whatever value is in the Service Commencement Date field.</inlineHelpText>
        <label>Sales Ops Service Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Language__c</fullName>
        <description>Field to track any additional language on the contract.</description>
        <label>Additional Language</label>
        <picklist>
            <picklistValues>
                <fullName>Shortfall Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Auto Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_City__c</fullName>
        <inlineHelpText>Also known as the Hub Admin; the Person who has permission to add/update/delete clients from within the Hub and/or iMeet.</inlineHelpText>
        <label>Site Admin Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Email__c</fullName>
        <inlineHelpText>Also known as the Hub Admin; the Person who has permission to add/update/delete clients from within the Hub and/or iMeet.</inlineHelpText>
        <label>Site Admin Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Name__c</fullName>
        <inlineHelpText>Also known as the Hub Admin; the Person who has permission to add/update/delete clients from within the Hub and/or iMeet.</inlineHelpText>
        <label>Site Admin Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Phone__c</fullName>
        <inlineHelpText>Also known as the Hub Admin; the Person who has permission to add/update/delete clients from within the Hub and/or iMeet.</inlineHelpText>
        <label>Site Admin Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Postal_Code__c</fullName>
        <inlineHelpText>Also known as the Hub Admin; the Person who has permission to add/update/delete clients from within the Hub and/or iMeet.</inlineHelpText>
        <label>Site Admin Contact Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_State_Province__c</fullName>
        <inlineHelpText>Also known as the Hub Admin; the Person who has permission to add/update/delete clients from within the Hub and/or iMeet.</inlineHelpText>
        <label>Site Admin Contact State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Street__c</fullName>
        <inlineHelpText>Also known as the Hub Admin; the Person who has permission to add/update/delete clients from within the Hub and/or iMeet.</inlineHelpText>
        <label>Site Admin Contact Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Also known as the Hub Admin; the Person who has permission to add/update/delete clients from within the Hub and/or iMeet.</inlineHelpText>
        <label>Site Admin Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Admin Contact)</relationshipLabel>
        <relationshipName>Deals_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Sales_Rep_Supervisor__c</fullName>
        <formula>IF( 
ISBLANK(Agreement_Sales_Rep_lookup__r.Manager.LastName), &quot;No Supervisor on record&quot;, 
Agreement_Sales_Rep_lookup__r.Manager.FirstName + &quot; &quot; + Agreement_Sales_Rep_lookup__r.Manager.LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Sales Rep Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Sales_Rep__c</fullName>
        <description>Used to house a sales rep who has been terminated.</description>
        <label>Deactivated Agreement Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Sales_Rep_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amendment_Number__c</fullName>
        <label>Amendment Number #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amendment_Type__c</fullName>
        <inlineHelpText>Please provide Andy with the appropriate values.</inlineHelpText>
        <label>Amendment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Req Approval Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgr, RVP, VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Request_URL__c</fullName>
        <formula>LEFT( $Api.Enterprise_Server_URL_25 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_25, 9) )  &amp;   $Label.PgiStaticApprovalUrl&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Request URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Escalation_Email__c</fullName>
        <label>Approver Escalation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PGi Pricing Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Contract_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Body__c</fullName>
        <label>Attachment Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Import_Cross_Ref__c</fullName>
        <formula>Company__r.Name + &quot;-&quot; + TEXT(ContractType__c) + &quot;-&quot; + TEXT(MONTH(Service_Commencement_Date__c))+TEXT(DAY(Service_Commencement_Date__c))+TEXT(YEAR(Service_Commencement_Date__c))</formula>
        <label>Attachment Import Cross Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Title_Rollup_del__c</fullName>
        <label>Attachment Title Rollup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Contract_End_Anniversary_Da__c</fullName>
        <description>Field used for the contract end/Anniversary Date update.</description>
        <label>Auto Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Counter__c</fullName>
        <description>Field used for the contract end/Anniversary Date update.</description>
        <label>Auto Renewal Counter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Value__c</fullName>
        <formula>IF(
SC_Auto_Renewal__c = True, &quot;Yes&quot;,
IF(
SC_Auto_Renewal__c = False, &quot;No&quot;, &quot;Error in Formula&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto-Renewal Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_City__c</fullName>
        <label>Billing Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <label>Billing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <label>Billing Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <label>Billing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Postal_Code__c</fullName>
        <label>Billing Contact Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_State_Province__c</fullName>
        <label>Billing Contact State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Street__c</fullName>
        <label>Billing Contact Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>